# sherlock-mcp

./: CONTRIBUTING.md  DEVLOG.md  Dockerfile  MISSION.md  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tests/: integration_test.py  test_main.py  test_sherlock_integration.py
